force-app/main/default/objects/Return__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Returns</relationshipLabel>
    <relationshipName>Case_Returns</relationshipName>
</CustomField>