force-app/main/default/objects/Return__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Lookup</type>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Returns</relationshipLabel>
    <relationshipName>Order_Returns</relationshipName>
</CustomField>