force-app/main/default/objects/Return__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Wrong_Item</fullName>
                <label>Wrong Item</label>
            </value>
            <value>
                <fullName>Not_Needed</fullName>
                <label>Not Needed</label>
            </value>
            <value>
                <fullName>Late_Delivery</fullName>
                <label>Late Delivery</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>