force-app/main/default/objects/Return__c/fields/RMA_Number__c.field-meta.xml
<CustomField>
    <fullName>RMA_Number__c</fullName>
    <label>RMA Number</label>
    <type>Text</type>
    <length>40</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>